# speicherstadt

./: .gitignore  Cargo.toml
axum_speicherstadt/: Cargo.toml
axum_speicherstadt/src/: crate_files.rs  lib.rs  models.rs  publish.rs
axum_speicherstadt/src/models/: dependency_kind.rs  package_name.rs
